--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ footer {
 }
 
 .h1__PC {
-	display: contents;;
+	display: none;
 }
 
 ul {
@@ -55,10 +55,11 @@ ul {
 }
 
 main {
-	background-color: #3CD0FA;
-		max-width: 960px;
-		margin: auto;
-		display: block;
+	background-color: #B864F5;
+	max-width: 100%;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
 }
 
 ol {
@@ -115,3 +116,29 @@ header {
 	background-color: #7c7c7c;
 }
 
+@media (min-width: 768px) {
+	main {
+		background-color: #3CD0FA;
+		max-width: 960px;
+		margin: auto;
+		display: block;
+	}
+
+	.h1__PC {
+		display: contents;
+	}
+
+	.head__item__mobile {
+		display: none;
+	}
+
+	.h1__mobile {
+		display: none;
+	}
+
+	.head__list {
+		display: flex;
+		gap: 50px;
+		display: content;
+	}
+}
