--- a/style.css
+++ b/style.css
@@ -33,16 +33,15 @@ footer {
 
 .head__list {
 	display: flex;
-	gap: 50px;
-	display: none;
+		gap: 50px;
+		display: content;
 }
 
-.head__item {
-	transition: border-bottom 0.4s ease;
-}
 
-.h1__PC {
-	display: none;
+
+h1{
+	display: block; 
+    margin: 0; 
 }
 
 ul {
@@ -51,15 +50,16 @@ ul {
 }
 
 .name {
+	
 	text-align: center;
+    margin-top: 20px;
 }
 
 main {
-	background-color: #B864F5;
-	max-width: 100%;
-	margin: auto;
-	display: flex;
-	flex-direction: column;
+	background-color: #3CD0FA;
+		max-width: 960px;
+		margin: auto;
+		display: block;
 }
 
 ol {
@@ -115,5 +115,4 @@ a {
 header {
 	background-color: #7c7c7c;
 }
-
 
